--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": "*"
   },
   "dependencies": {
+    "deprecated-react-native-prop-types": "^5.0.0",
     "prop-types": "^15.5.10"
   },
   "devDependencies": {
